examples/test/testpolicy3123.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3123
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key7: value40
      key9: value39
      key31: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value37
          key18: value30
          key7: value22
      podSelector:
        matchLabels:
          key25: value23
          key0: value4
